# openacr-mcp

./: .gitignore  .mcp.json  .mcp.json.example  README.md  pyproject.toml
openacr_mcp/: __init__.py  __main__.py  acr_client.py  header_parser.py  server.py
tests/: test_acr_client.py  test_header_parser.py  test_server.py
