[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openacr-mcp"
version = "0.1.0"
description = "MCP server wrapping OpenACR CLI tools for AI-assisted schema authoring and code generation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["openacr_mcp*"]
